--- a/src/main/resources/templates/fragments/pageHead.html
+++ b/src/main/resources/templates/fragments/pageHead.html
@@ -54,7 +54,7 @@
                         </ul>
                     </li>
                 </ul>
-                <div th:if="${user}" th:utext="'Welcome,  ' + ${user.nickName}"></div>
+                <div class="welcome-text" th:if="${user}" th:utext="'Welcome,  ' + ${user.nickName}"></div>
             </nav>
         </div>
     </header>
