--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -134,3 +134,24 @@ hr {
     border-top: 2px solid #425370;
     margin-bottom: 10px;
 }
+
+.card-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.card {
+    margin-bottom: 20px;
+}
+
+.card-image-div {
+    height: 150px;
+    width: 100%;
+}
+
+.card-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
