--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -27,10 +27,16 @@
         <h2 th:text="${user.id} == null ? 'Register for a new Account' : 'Change password'">Register for a new Account</h2>
         <form class="form-horizontal" name="user-form" id="user-form" action="register.html" th:action="@{/register}" th:object="${user}" method="post">
             <div class="form-group">
-                    <label class="col-md-3 control-label" for="email">Email:</label>
-                    <div class="col-md-8">
-                        <input class="form-control" type="text" name="email" id="email" />
-                    </div>
+                <label class="col-md-3 control-label" for="email">Email:</label>
+                <div class="col-md-8">
+                    <input class="form-control" type="text" name="email" id="email" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-3 control-label" for="username">Username:</label>
+                <div class="col-md-8">
+                    <input class="form-control" type="text" name="username" id="username" />
+                </div>
             </div>
             <div class="form-group">
                 <div th:if="${user.id} != null">
