--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -36,7 +36,7 @@
     <h1>Foster Story</h1>
 </header>
 <div class="container main-body">
-
+    <div class="main-feature-title col-lg-12-centered">Featured Foster Story</div>
     <div class="row">
         <div class="col-md-8 col-xs-12">
             <img class="img-responsive img-rounded" src="http://placehold.it/900x350" th:src="@{/story/image(id=636)}"
@@ -44,7 +44,7 @@
         </div>
         <!-- /.col-md-8 -->
         <div class="col-md-4 col-xs-12">
-            <h1>Shadow</h1>
+            <h2>Shadow</h2>
             <p>Shadow is an energetic ball chaser. He is very friendly and will lick you to death if
                 given the chance. But throw a ball and he will be off chasing it until you arm is too
                 tired to throw again. As the child of working dogs in Texas he also loves herding people
