--- a/src/main/resources/templates/viewStory.html
+++ b/src/main/resources/templates/viewStory.html
@@ -6,6 +6,7 @@
 <!--/*@thymesVar id="post" type="com.fosterstory.entity.Post"*/-->
 <!--/*@thymesVar id="animal" type="com.fosterstory.entity.Animal"*/-->
 <!--/*@thymesVar id="imageId" type="java.lang.Integer"*/-->
+<!--/*@thymesVar id="image" type="com.fosterstory.entity.Image"*/-->
 
 <head>
     <!-- Latest compiled and minified CSS -->
@@ -68,7 +69,7 @@
 
         <div class="row">
             <div class="col-xs-7">
-                <img class="animalImage img-responsive" th:src="@{/story/image(id=${imageId})}" src="//placehold.it/350x250"/>
+                <img class="animalImage img-responsive" th:src="@{/story/image(imageId=${imageId})}" src="//placehold.it/350x250"/>
             </div>
             <div class="col-xs-5 col-sm-12">
                 <h3>About <span th:text="${animal.name}">Me</span></h3>
@@ -103,11 +104,11 @@
                 <h3>Foster Parent</h3>
 
                 <ul class="profile-details">
-                    <li th:if="${animal.user.phone} != ''">
+                    <li th:if="${animal.user.phone} != null">
                         <div>phone</div>
                         <span th:text="${animal.user.phone}">+44 123 456 789</span>
                     </li>
-                    <li th:if="${animal.user.tumblr} != ''">
+                    <li th:if="${animal.user.tumblr} != null">
                         <div>Social Links</div>
                         Tumblr <span th:text="${animal.user.tumblr} +'.tumblr.com'">url</span>
                     </li>
@@ -143,6 +144,17 @@
                     <div class="col-sm-5">
                         <h2>Gallery</h2>
                         <div class="animal-gallery">
+                            <div class="col-lg-12 col-md-3 col-sm-12 col-xs-12">
+                                <div class="card">
+                                    <div class="card-image-div" th:each="image : ${animal.images}">
+                                        <img class="img-fluid card-image card-img-top img-responsive"
+                                             src="http://mdbootstrap.com/images/regular/nature/img%20(28).jpg"
+                                             th:src="@{/story/image(imageId=${image.id})}"
+                                             alt="Card image cap"/>
+                                    </div>
+
+                                </div>
+                            </div>
 
                         </div>
                     </div><!--/col-->
