--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--/*@thymesVar id="user" type="com.theIronYard.entity.User"*/-->
+<!--/*@thymesVar id="user" type="com.fosterstory.entity.User"*/-->
 
 <head>
     <!-- Latest compiled and minified CSS -->
