--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -52,7 +52,7 @@
                       th:action="@{/story/image}" method="post" th:object="${animal}">
                     <input type="hidden" name="animalId" id="animalId" th:value="${animal.id}"/>
                     <div class="text-center">
-                        <img src="//placehold.it/100" name="imageId" id="imageId" class="avatar img-circle" alt="avatar" th:src="@{/story/image(imageId=${imageId})}"/>
+                        <img src="//placehold.it/100" name="imageId" id="imageId" class="avatar img-circle" alt="avatar" th:src="@{/image(imageId=${imageId})}"/>
                         <h6>Upload Main Image</h6>
                         <input type="file" name="file" id="file" class="form-control"/>
                         <button class="btn" type="submit" id="saveImage" name="action" value="file">Add image</button>
