branch register in register and changePassword, fix search on main page, fix post to keep photos

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -59,7 +59,6 @@
 
 <div class="container main-body">
     <h2>Foster Parent Details</h2>
-    <hr />
     <div class="row" id="fosterParentDetails">
         <div class="col-md-3">
             <form class="form-horizontal" id="user-image" role="form" action="story.html"
@@ -76,7 +75,7 @@
             </form>
 
         </div>
-        </div>
+    <!--</div>-->
 
         <div class="col-md-9 personal-info">
             <!--<div class="alert alert-info alert-dismissable">
@@ -283,6 +282,7 @@
             </form>
         </div>
     </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
