--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -16,6 +16,7 @@
 <!--/*@thymesVar id="photoPosts" type="java.util.List<PhotoPost>"*/-->
 <!--/*@thymesVar id="photoPost" type="com.fosterstory.entity.PhotoPost"*/-->
 <!--/*@thymesVar id="imageIds" type="java.util.List<Integer>"*/-->
+<!--/*@thymesVar id="search" type="com.fosterstory.bean.Search"*/-->
 
 <head>
     <!-- Latest compiled and minified CSS -->
@@ -39,17 +40,17 @@
     <div class="main-feature-title col-lg-12-centered">Featured Foster Story</div>
     <div class="row">
         <div class="col-md-8 col-xs-12">
-            <img class="img-responsive img-rounded" src="http://placehold.it/900x350" th:src="@{/image(id=636)}"
+            <img class="img-responsive img-rounded" src="http://placehold.it/900x350" th:src="@{/image(imageId=3019)}"
                  id="feature"/>
         </div>
         <!-- /.col-md-8 -->
         <div class="col-md-4 col-xs-12">
-            <h2>Shadow</h2>
+            <h2>Shadow's story</h2>
             <p>Shadow is an energetic ball chaser. He is very friendly and will lick you to death if
                 given the chance. But throw a ball and he will be off chasing it until you arm is too
-                tired to throw again. As the child of working dogs in Texas he also loves herding people
+                tired to throw again. As the son of working dogs in Texas he also loves herding people
                 and other animals.</p>
-            <a class="btn btn-primary btn-lg" th:href="@{/viewStory(animalId=630)}">My Story</a>
+            <a class="btn btn-primary btn-lg" th:href="@{/viewStory(animalId=1582)}">More info...</a>
         </div>
         <!-- /.col-md-4 -->
     </div>
@@ -57,14 +58,14 @@
 <hr/>
 <div class="container-fluid">
 
-    <form class="well" id="searchForm" role="form" action="list.html" th:action="@{/}" method="post">
+    <form class="well" id="searchForm" role="form" action="list.html" th:action="@{/}" method="post" th:object="${search}">
         <h3>Search Foster Stories:</h3>
         <div class="row">
             <div class="col-md-2">
-                <label for="type">
+                <label for="typeId">
                     <strong>Type:</strong>
                 </label>
-                <select class="form-control" name="type" id="type">
+                <select class="form-control" name="typeId" id="typeId">
                     <option value="">select...</option>
                     <option th:each="type : ${types}"
                             th:text="${type.name}"
@@ -75,10 +76,10 @@
             </div>
 
             <div class="col-md-2">
-                <label for="breed">
+                <label for="breedId">
                     <strong>Breed:</strong>
                 </label>
-                <select class="form-control" name="breed" id="breed">
+                <select class="form-control" name="breedId" id="breedId">
                     <option value="">select...</option>
                     <option th:each="breed : ${breeds}"
                             th:text="${breed.name}"
@@ -96,18 +97,18 @@
                        th:value="${search.name}"/>
             </div>
 
-            <div class="col-sm-2">
+           <!-- <div class="col-sm-2">
                 <label for="locale">
                     City/Zip:
                 </label>
                 <input class="form-control" type="text" name="locale" id="locale" placeholder="City or Zip"/>
-            </div>
+            </div>-->
 
             <div class="col-sm-2">
-                <label for="animalId">
+                <label for="id">
                     <strong>Animal ID:</strong>
                 </label>
-                <input class="form-control" type="text" name="animalId" id="animalId" placeholder="ID"
+                <input class="form-control" type="text" name="id" id="id" placeholder="ID"
                        th:text="${search.id}"/>
             </div>
         </div>
