--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="../static/css/styles.css" th:href="@{css/styles.css}"/>
     <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script language="JavaScript" src="../static/script/breedCheck.js" th:src="@{script/breedCheck.js}"></script>
+    <script type="JavaScript" src="../static/script/breedCheck.js" th:src="@{script/breedCheck.js}"></script>
 </head>
 <body>
 <header class="row" th:replace="fragments/pageHead :: pageHead">
